Changed fluid simulation to implement pressure and attempt to depict a smoke like fluid moving upward. Implemented new methods for pressure changes, velocity and density advection, and changed the diffusion formula slightly